# ChangeLog for x11-misc/xbindkeys
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/ChangeLog,v 1.50 2007/08/06 19:36:39 uberlord Exp $

  06 Aug 2007; Roy Marples <uberlord@gentoo.org> xbindkeys-1.8.0.ebuild:
  Keyworded ~x86-fbsd, #141142 thanks to Robert Annessi

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  xbindkeys-1.7.3.ebuild, xbindkeys-1.8.0.ebuild:
  Drop virtual/x11 references.

  14 Mar 2007; Przemysław Maciąg <troll@gentoo.org>
  xbindkeys-1.7.3.ebuild, xbindkeys-1.8.0.ebuild:
  Add check for compilation with guile-1.8 (see #163650). Thx to
  degrenier@easyconnect.fr

  18 Feb 2007; Fabian Groffen <grobian@gentoo.org> xbindkeys-1.7.3.ebuild,
  xbindkeys-1.8.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*xbindkeys-1.8.0 (09 Feb 2007)

  09 Feb 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +xbindkeys-1.8.0.ebuild:
  Version bump, bug #166036.

  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> Manifest:
  Fix Manifest.

  10 Jan 2007; <marijn@gentoo.org> xbindkeys-1.7.3.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.

  14 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -xbindkeys-1.7.2-r1.ebuild:
  Remove old version.

  19 Sep 2006; Doug Goldstein <cardoe@gentoo.org> xbindkeys-1.7.2-r1.ebuild,
  xbindkeys-1.7.3.ebuild:
  tcltk -> tk USE flag change as per bug #17808

  08 Sep 2006; Daniel Gryniewicz <dang@gentoo.org> xbindkeys-1.7.3.ebuild:
  Marked stable on amd64 for bug #145368

  03 Sep 2006; Markus Rothe <corsair@gentoo.org> xbindkeys-1.7.3.ebuild:
  Stable on ppc64; bug #145368

  30 Aug 2006; Michael Hanselmann <hansmi@gentoo.org>
  xbindkeys-1.7.3.ebuild:
  Stable on ppc.

  30 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  xbindkeys-1.7.3.ebuild:
  Stable on sparc

  30 Aug 2006; Joshua Jackson <tsunam@gentoo.org> xbindkeys-1.7.3.ebuild:
  Stable x86; bug #145368

*xbindkeys-1.7.3 (29 Jul 2006)
