@@ -1,4 +1,4 @@
 DIST xbindkeys-1.8.0.tar.gz 129930 RMD160 09ff8520b2b8865ae2cd7218b9acf2a87ed29286 SHA1 155a5c3479b192f875fff7ee23890b6108ebaca7 SHA256 c422637814d76cf6f85acc9b3372fede6ea7295b2c31884ac68ee4833cf06f79
-EBUILD xbindkeys-1.8.0.ebuild 1302 RMD160 726b7b40e630be81cfc1832dc8365c88954800c6 SHA1 b4341edb6d162d94ff8b6273ceb640a0d8593049 SHA256 5b061a0f18113243b3d56648b8275b71c4be3ff2204f5a5f1d3a29d57db5dc23
-MISC ChangeLog 6406 RMD160 417745ccfd9153f1db7485c818a06f4d2d8ccd94 SHA1 5373154b5c4d3769e3fc49ccd74b2427b541806f SHA256 573632ced5e9f8574f5cafd34489968660f6dabbc8aa80603bc3073a4963e08a
+EBUILD xbindkeys-1.8.0.ebuild 993 RMD160 0642b7e07a5e3988045258fa62dd026eb364ebb0 SHA1 9401a4f6d929a3ab93196352095f9ddd9bb83cb2 SHA256 aec175090eba96def81f3b0e76d09001f73101503c9893faf483d5f5e01af669
+MISC ChangeLog 6702 RMD160 bb787b781e1fbf38a17c0fd032d4affe362b1b14 SHA1 17fabb405f3a25c0c8f1906ced31f3739d9bebb3 SHA256 06f4125f6463aee261b22cbc1c1be8ecd0a546279d92d2dab5a5268707ca4bae
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
