@@ -1,6 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/xbindkeys-1.8.0.ebuild,v 1.5 2007/08/06 19:36:39 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/xbindkeys-1.8.0.ebuild,v 1.6 2010/02/08 18:20:05 jer Exp $
+
+EAPI="2"
 
 inherit eutils
 
@@ -17,30 +19,23 @@ SLOT="0"
 IUSE="guile tk"
 
 RDEPEND="x11-libs/libX11
-	guile? ( dev-scheme/guile )
+	guile? ( >=dev-scheme/guile-1.8.4[deprecated] )
 	tk? ( dev-lang/tk )"
 DEPEND="${RDEPEND}
 	x11-proto/xproto"
 
-pkg_setup() {
-	if use guile && has_version ">=dev-scheme/guile-1.8" \
-		&& ! built_with_use ">=dev-scheme/guile-1.8" deprecated
-	then
-		eerror "In order to compile xbindkeys with guile-1.8 or higher, you need"
-		eerror "to recompile dev-scheme/guile with the \"deprecated\" USE flag."
-		die "Please re-emerge dev-scheme/guile with USE=\"deprecated\"."
-	fi
-}
-
-src_compile() {
+src_configure() {
 	local myconf
 	use tk || myconf="${myconf} --disable-tk"
 	use guile || myconf="${myconf} --disable-guile"
 
 	econf ${myconf} || die "configure failed"
-	emake DESTDIR=${D} || die "make failed"
+}
+
+src_compile() {
+	emake DESTDIR="${D}" || die "make failed"
 }
 
 src_install() {
-	make DESTDIR=${D} BINDIR="${EPREFIX}"/usr/bin install || die "make install failed"
+	make DESTDIR="${D}" BINDIR="${EPREFIX}"/usr/bin install || die "make install failed"
 }
