@@ -1,6 +1,15 @@
 # ChangeLog for x11-misc/xbindkeys
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/ChangeLog,v 1.50 2007/08/06 19:36:39 uberlord Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xbindkeys/ChangeLog,v 1.52 2010/02/08 18:20:05 jer Exp $
+
+  08 Feb 2010; Jeroen Roovers <jer@gentoo.org> xbindkeys-1.7.3.ebuild,
+  xbindkeys-1.8.0.ebuild, xbindkeys-1.8.3.ebuild:
+  Drop built_with_use.
+
+*xbindkeys-1.8.3 (08 Feb 2010)
+
+  08 Feb 2010; Jeroen Roovers <jer@gentoo.org> +xbindkeys-1.8.3.ebuild:
+  Version bump thanks to Tim Harder (bug #246035).
 
   06 Aug 2007; Roy Marples <uberlord@gentoo.org> xbindkeys-1.8.0.ebuild:
   Keyworded ~x86-fbsd, #141142 thanks to Robert Annessi
